<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".set_Goal_Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:background="#4e2e76"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/GoalsNamesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/goal_habit_name"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/goalNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="prompt_goalName"
        android:hint="@string/prompt_goal_name"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GoalsNamesLabel" />

    <TextView
        android:id="@+id/GoalsDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/goal_habit_description"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goalNameEditText" />

    <EditText
        android:id="@+id/goalDescriptionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="prompt_goalDescription"
        android:hint="@string/prompt_goal_description"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GoalsDescriptionLabel" />

    <TextView
        android:id="@+id/GoalStartDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/goal_start_date"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goalDescriptionEditText" />

    <EditText
        android:id="@+id/goalStartDateEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="prompt_startDate"
        android:hint="@string/prompt_start_date"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GoalStartDateLabel" />

    <TextView
        android:id="@+id/GoalEndDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/goal_end_date"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goalStartDateEditText" />

    <EditText
        android:id="@+id/goalEndDateEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="prompt_endDate"
        android:hint="@string/prompt_end_date"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GoalEndDateLabel" />

    <TextView
        android:id="@+id/GoalRecurrenceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/goal_recurrence"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goalEndDateEditText" />

    <LinearLayout
        android:id="@+id/checkboxContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GoalRecurrenceLabel">

        <!-- First Checkbox -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_s"
                android:textSize="12sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/label_s" />

        </LinearLayout>

        <!-- Second Checkbox -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_m"
                android:textSize="12sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/label_m" />

        </LinearLayout>

        <!-- Third Checkbox -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_t"
                android:textSize="12sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/label_t" />

        </LinearLayout>

        <!-- Fourth Checkbox -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_w"
                android:textSize="12sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/label_w" />

        </LinearLayout>

        <!-- Fifth Checkbox -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_th"
                android:textSize="12sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/label_th" />

        </LinearLayout>

        <!-- Sixth Checkbox -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_f"
                android:textSize="12sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/label_f" />

        </LinearLayout>

        <!-- Seventh Checkbox -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_s"
                android:textSize="12sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:contentDescription="@string/label_s" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#4e2e76"
        android:textColor="#707070"
        android:text="@string/action_go_back"
        app:layout_constraintEnd_toStartOf="@+id/addHabitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.32" />

    <Button
        android:id="@+id/addHabitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#4e2e76"
        android:textColor="#707070"
        android:text="@string/action_add_habit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/goBackButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.32" />

    <TextView
        android:id="@+id/CurrentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text=" "
        android:textColor="#707070"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
