<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

  <EditText
      android:id="@+id/username"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="340dp"
      android:layout_marginEnd="24dp"
      android:autofillHints="@string/prompt_email"
      android:hint="@string/prompt_email"
      android:inputType="textEmailAddress"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/password"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="24dp"
      android:autofillHints="@string/prompt_password"
      android:hint="@string/prompt_password"
      android:imeActionLabel="@string/action_sign_in_short"
      android:imeOptions="actionDone"
      android:inputType="textPassword"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/username" />

  <Button
      android:id="@+id/login"
      android:enabled="false"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="start"
      android:layout_marginStart="48dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="48dp"
      android:layout_marginBottom="64dp"
      android:text="@string/action_sign_in"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password"
      app:layout_constraintVertical_bias="0.2" />

  <ProgressBar
      android:id="@+id/loading"
      android:visibility="gone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginStart="32dp"
      android:layout_marginTop="64dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="64dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/password"
      app:layout_constraintStart_toStartOf="@+id/password"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.3" />

  <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="148dp"
      android:text="Skip to main"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginBottom="8dp"
      app:layout_constraintBottom_toTopOf="@+id/username"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/logo_login" />

  </androidx.constraintlayout.widget.ConstraintLayout>